# Software-Team-Entrance-Task

./: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/gps_distance/lib/gps_distance/: completeSoftwareOnboarding
ros_ws/install/gps_distance/share/gps_distance/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/interfaces/share/interfaces/: package.sh
ros_ws/install/interfaces/share/interfaces/cmake/: rosidl_cmake-extras.cmake
ros_ws/install/launch_nav/share/launch_nav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/launch_nav/share/launch_nav/cmake/: launch_navConfig.cmake
ros_ws/install/launch_test/share/launch_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/test_gps/lib/test_gps/: check  test_gps
ros_ws/install/test_gps/share/test_gps/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/log/: latest_build
ros_ws/src/Navigation/gps_distance/: package.xml  setup.cfg  setup.py
ros_ws/src/Navigation/gps_distance/gps_distance/: gps_distance.py
ros_ws/src/Navigation/launch_nav/: CMakeLists.txt  package.xml
ros_ws/src/Navigation/launch_nav/launch/: launch.launch.py
ros_ws/src/interfaces/: CMakeLists.txt  package.xml
ros_ws/src/interfaces/msg/: Completed.msg  Example.msg
ros_ws/src/testing/launch_test/: CMakeLists.txt
ros_ws/src/testing/test_gps/: package.xml  setup.cfg  setup.py
ros_ws/src/testing/test_gps/test_gps/: check.py
(+16 files in other folders)
