<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_nav</name>
  <version>0.0.0</version>
  <description>Launches applicants nodes</description>
  <maintainer email="filipp@my.yorku.ca">Filip</maintainer>
  <license>Copyright York University Robotics Society</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- The depenancy for gps_distance has already been taken care of for you-->
  <exec_depend>gps_distance</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
